<resources>
    <string name="app_name">Hosp-in-all</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">No user</string>
    <string name="nav_header_subtitle" translatable="false"> </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Send Medical Alarm</string>
    <string name="menu_gallery">Log In</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Generate ID Hex</string>
    <string name="menu_send">Active Medical Alarms</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="configuracion_actual"><b><i>Current settings</i></b></string>
    <string name="nombre_de_usuario"><b>Username</b></string>
    <string name="contrase_a"><b>Password</b></string>
    <string name="id_dispositivo_hexadecimal"><b><i>Hexadecimal device ID</i></b></string>
    <string name="addInfo">(You can write any additional information here)</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="insert_a_new_id">Insert a new ID</string>
    <string name="generate_a_n_random_id_value">Generate a\n random ID value</string>
    <string name="manually_add_a_n_new_id_value">Manually add a\n new ID value</string>
    <string name="id">ID : </string>
    <string name="user">User : </string>
    <string name="device_s_name">Device\'s name : </string>
    <string name="device_s_id">Device\'s ID : </string>
    <string name="database_s_name">Database\'s name : </string>
    <string name="url_database">URL Database : </string>
    <string name="open_preferences">Open preferences</string>
    <string name="unpin_screen">Unpin screen</string>
    <string name="generate_hex_id">Generate Hex ID</string>
    <string name="patient_alarms">Send Patient Alarm</string>
    <string name="pref_string">User and database\'s configuration</string>
    <string name="mess_ques">The %s has been selected, please confirm your choice.</string>
    <string name="sent">sent</string>
    <string name="active_patient_alarms">Active Patient Alarms</string>
    <string name="bb">Unpinned App</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="bathroom_n_call">Bathroom\n call</string>
    <string name="request_n_doctor">Request\n doctor</string>
    <string name="medicine_n_reminder">Medicine\n reminder</string>
    <string name="emergency">Emergency</string>
    <string name="welcome_to_the_hosp_in_all_app">Welcome to the Hosp-in-all app</string>
    <string name="emergency_alarm">Emergency alarm</string>
    <string name="wrong_passwd">Wrong password</string>
    <string name="login_completed">Log-In complete !</string>
    <string name="empty_username">The username\'s empty</string>
    <string name="user_logout">User logged out</string>
    <string name="not_hex_warning">The inserted value isn\'t Hexadecimal !</string>
    <string name="hex_gener">Hex value generated</string>
    <string name="hex_length">The Hexadecimal value must be 4 characters long !</string>
    <string name="unpinned_screen">Screen unpinned</string>
    <string name="wrong_user">Wrong username</string>
    <string name="charger_connected">Charger connected </string>
    <string name="charger_disc">Charger disconnected </string>
    <string name="night_theme">Night theme</string>
    <string name="light_theme">Light theme</string>
    <string name="current_theme">Current theme: </string>
    <string name="devi_name">Device\'s name</string>
    <string name="db_name">Database\'s name</string>
    <string name="app_them">App theme</string>
</resources>

