<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="Log In" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_airline_seat_flat_angled_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/alarm_bell_blue_24dp"
            android:title="@string/menu_send" />

        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_cached_black_24dp"
            android:title="@string/generate_hex_id" />
        <item
            android:id="@+id/userAlarmFragment"
            android:icon="@drawable/ic_local_hotel_black_24dp"
            android:title="@string/patient_alarms" />
        <item
            android:id="@+id/listaAlarmasPacientes"
            android:icon="@drawable/ic_add_alert_black_24dp"
            android:title="@string/active_patient_alarms" />
    </group>

    <!--
    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/alarm_bell_blue_24dp"
                android:title="@string/menu_send" />
        </menu>
    </item>
-->
</menu>
