<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/nombre_de_usuario"
        android:textSize="18sp" />


    <EditText
        android:maxLines="1"
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/contrase_a"
        android:textSize="18sp" />


    <EditText
        android:maxLines="1"
        android:id="@+id/edit_passwordUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <Space
            android:layout_width="100dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_logOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_weight="2"/>

</LinearLayout>